--- a/Gmt/templates/emails/signup.hbs
+++ b/Gmt/templates/emails/signup.hbs
@@ -1,13 +1,14 @@
 <h3>New User</h1>
-{{#if mailBody.email}}
-
-	<p class="text-larger">From
-		{{#if mailBody.name}}
-			<strong>{{mailBody.name}}</strong>
-		{{/if}}
-	</p>
 	{{#if mailBody.email}}
-		<a href="mailto:{{enquiry.email}}">Email: {{mailBody.email}}</a>
-	{{/if}}
 
-{{/if}}
+		<p class="text-larger">From
+			{{#if mailBody.name}}
+				<strong>{{mailBody.name}}</strong>
+			{{/if}}
+		</p>
+		{{#if mailBody.email}}
+			<a href="mailto:{{enquiry.email}}">Email: {{mailBody.email}}</a>
+		{{/if}}
+		Click on link to veryfy
+		<a href="188.166.178.107/doctors">VERIFY</a>
+	{{/if}}
