--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,117 +1,147 @@
-{{!< default}}
+<div class="row procedure">
+	<div class="homepage">
+		<section class="hero1">
+			<section class="container">
+				<div class="row">
+					<!-- <div class="col-md-1 col-lg-1 col-sm-1 col-xs-12"></div> -->
+					<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
 
-<!-- <div class="jumbotron"><img src="/images/logo.svg" width="160">
-		<h1>Welcome</h1>
-		hdjsfjdblkj
-		{{specialities}}
-		{{#each provider}}
-			{{name}}
-		{{/each}} -->
-		<div class="row procedure">
-<div class="homepage">
-	<div class="row pp">
-		<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
-		</div>
-		<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
-			<h2 style="margin-left: -2px;">Meet The Doctors</h2>
-			<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
-			<div class="border_doc">&nbsp;</div>
-			<p>Choose the right doctor for your treatment</p>
-			<p>Consult a specialist for a second opinion</p>
-		</div>
+						<div class="row pp">
+							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+							</div>
+							<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
+								<h2 style="margin-left: -2px;color: rgb(43, 43, 43);">The perfect place for a complete recovery</h2>
+								<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
+								<!-- <div class="border_doc">&nbsp;</div>
+								<p>Choose the right doctor for your treatment</p>
+								<p>Consult a specialist for a second opinion</p> -->
+							</div>
+						</div>
+						<!-- <div class="row">
+							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+							</div>
+
+							<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12 block">
+
+
+							</div>
+							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-0"></div>
+						</div> -->
+					</div>
+
+					<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
+				</div>
+
+			</section>
+		</section>
+		<!-- <div class="row pp" style="margin-top: 50px;">
+			<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
+				<div class="row pp">
+					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+					</div>
+					<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
+						<h2 style="margin-left: -2px;">Meet The Doctors</h2>
+						<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
+						<div class="border_doc">&nbsp;</div>
+						<p>Choose the right doctor for your treatment</p>
+						<p>Consult a specialist for a second opinion</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
+		</div> -->
 	</div>
-</div>
 
-<div class="row">
-	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="thumbnail">
-			<!-- <img src="..." alt="..."> -->
-			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-			<div class="caption">
+	<div class="row">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail">
+				<!-- <img src="..." alt="..."> -->
+				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+				<div class="caption">
 
-				<p>DOC</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+					<p>DOC</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail">
+				<!-- <img src="..." alt="..."> -->
+				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+				<div class="caption">
+
+					<p>HOSP</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail">
+
+				<div class="caption">
+
+					<p>PROCEDURES</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="thumbnail">
-			<!-- <img src="..." alt="..."> -->
-			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-			<div class="caption">
+	<div class="jumbotron" style="">
 
-				<p>HOSP</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+		<h1>Hello, world!</h1>
+		<p>...</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
+
+
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+			<div class="thumbnail">
+				<!-- <img src="..." alt="..."> -->
+				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+				<div class="caption">
+
+					<p>DOC</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+			<div class="thumbnail">
+				<!-- <img src="..." alt="..."> -->
+				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
+				<div class="caption">
+
+					<p>HOSP</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+			<div class="thumbnail">
+
+				<div class="caption">
+
+					<p>PROCEDURES</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+			<div class="thumbnail">
+
+				<div class="caption">
+
+					<p>PROCEDURES</p>
+					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="thumbnail">
-
-			<div class="caption">
-
-				<p>PROCEDURES</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="jumbotron" style="">
-
-  <h1>Hello, world!</h1>
-  <p>...</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-</div>
-
-
-<div class="row">
-	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-		<div class="thumbnail">
-			<!-- <img src="..." alt="..."> -->
-			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-			<div class="caption">
-
-				<p>DOC</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
-			</div>
-		</div>
-	</div>
-
-<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-		<div class="thumbnail">
-			<!-- <img src="..." alt="..."> -->
-			<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-			<div class="caption">
-
-				<p>HOSP</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-		<div class="thumbnail">
-
-			<div class="caption">
-
-				<p>PROCEDURES</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-		<div class="thumbnail">
-
-			<div class="caption">
-
-				<p>PROCEDURES</p>
-				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-			</div>
-		</div>
-	</div>
-</div>
 </div>
