--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -185,6 +185,7 @@ $icon-font-path: "../fonts/";
 				}
 }
 .procedure {
+
 				overflow: hidden;
 				margin: 0;
 				.border {
@@ -812,6 +813,53 @@ a:focus {
 								.block {
 												background-color: rgb(198,198,198);
 												padding: 5px 15px;
+								}
+				}
+}
+.tryIndex{
+	position: relative;
+	top: 113px;
+}
+.hero1 {
+				background: url("../images/GMTHomeHD1.jpg")no-repeat center center;
+				background-repeat: no-repeat;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+				display: table;
+				width: 100%;
+				// position: absolute;
+				// top: 114px;
+				height: 447px;
+				.container {
+								position: absolute;
+								bottom: 0;
+								left: 0;
+								width: 100%;
+								top: 220px;
+								.pp {
+
+												// padding-left: 20px;
+												padding-bottom: 11px;
+												margin-bottom: 40px;
+												.border_doc {
+																border-bottom: 5px solid #ff6c6f;
+																width: 10%;
+																margin-top: -15px;
+																margin-bottom: 10px;
+												}
+								}
+								h2 {
+												font-family: SourceSansPro-Semibold;
+												font-size: 30px;
+												margin-bottom: 0;
+												color: rgb(100,100,100);
+								}
+								p {
+												font-size: 20px;
+												margin-bottom: 0;
+												font-family: SourceSansPro-Regular;
 								}
 				}
 }
