--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -37,7 +37,7 @@
 
 	<div id="header" style="margin-top:0px;">
 		<!-- <div class="container"> -->
-		<div role="navigation" class="navbar navbar-inverse" style="border-radius:0px;">
+		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top" style="border-radius:0px;">
 			<div class="container-fluid">
 
 				<div class="row">
@@ -99,7 +99,7 @@
 		</div>
 		<!-- </div> -->
 	</div>
-	<div id="body">
+	<div class="tryIndex" id="body">
 		<!--
 				Flash messages allow you to display once-off status messages to users, e.g. form
 				validation errors, success messages, etc
@@ -139,73 +139,75 @@
 
 
 </div>y of your template's content-->
+
 		{{{body}}}
+		<nav class="footer">
+			<div class="fluid-container">
+				<div class="foot row" style="">
+					<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
+						<div class="row">
+							<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
+							</div>
+							<div class="col-md-11 col-lg-11 col-xs-11 col-sm-11 f_img" style="margin-left: -5px;">
+								<img src="../images/gmtwhite.png" style="">
+								<p style=" margin-bottom: 0px; padding-top: 15px; ">+91 832 240 5900</p>
+								<p style=" ">info@goamedicaltravel.com</p>
+								<p style=" margin-bottom: 0px;padding-bottom: 18px;"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8 col-lg-8 col-xs-8 col-sm-8">
+						<div class="row foot_data" style="">
+
+							<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
+								<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Explore</h4>
+								<ul style="list-style-type:none; padding-left: 0px;">
+									<li><a href="/" style="	color: white;">About Us</a></li>
+									<li><a href="/" style="color:white; ">How it Works</a></li>
+									<li><a href="/" style="color:white; ">HIPAA</a></li>
+									<li><a href="/" style="color:white; ">Privacy Policy</a></li>
+									<li><a href="/" style="color:white;">Contact Us</a></li>
+									<li><a href="/" style="color:white; ">Blog</a></li>
+								</ul>
+							</div>
+
+							<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
+								<h4>&nbsp;</h4>
+								<ul style="list-style-type:none; padding-left: 0px;">
+									<li><a href="/" style="color:white; ">Our Mission</a></li>
+									<li><a href="/" style="color:white; ">FAQs</a></li>
+									<li><a href="/" style="color:white; ">Terms of Use</a></li>
+									<li><a href="/" style="color:white; ">Management</a></li>
+									<li><a href="/" style="color:white;">News & Events</a></li>
+									<ul>
+							</div>
+							<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
+							</div>
+							<div class="col-md-5 col-lg-5 col-xs-5 col-sm-5" style="padding-left: 50px;">
+								<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Connect On</h4>
+								<a href=""><i class="fa fa-facebook-square fa-2x" style="color:rgb(58,87,149)"></i></a>
+								<a href=""><i class="fa fa-twitter-square fa-2x" style="color:rgb(40,169,224)" ></i></a>
+								<a href=""><i class="fa fa-google-plus-square fa-2x" style="color:rgb(230,75,68)"></i></a>
+								<a href=""><i class="fa fa-linkedin-square fa-2x" style="color:rgb(1,119,181)"></i></a>
+
+								<!-- <h4>&nbsp;</h4> -->
+								<!-- <div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px;"></div> -->
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+				<script src="/js/pro.js"></script>
+
+
+			</div>
+			</div>
+		</nav>
 	</div>
 	<!-- <div class="container"> -->
-	<nav class="footer" style="">
-		<div class="fluid-container">
-			<div class="foot row" style="">
-				<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-					<div class="row">
-						<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
-						</div>
-						<div class="col-md-11 col-lg-11 col-xs-11 col-sm-11 f_img" style="margin-left: -5px;">
-							<img src="../images/gmtwhite.png" style="">
-							<p style=" margin-bottom: 0px; padding-top: 15px; ">+91 832 240 5900</p>
-							<p style=" ">info@goamedicaltravel.com</p>
-							<p style=" margin-bottom: 0px;padding-bottom: 18px;"><i class="fa fa-copyright"></i> Copyright 2015 Friendly Hospitality Solutions Pvt. Ltd.</p>
 
-						</div>
-					</div>
-				</div>
-				<div class="col-md-8 col-lg-8 col-xs-8 col-sm-8">
-					<div class="row foot_data" style="">
-
-						<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
-							<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Explore</h4>
-							<ul style="list-style-type:none; padding-left: 0px;">
-								<li><a href="/" style="	color: white;">About Us</a></li>
-								<li><a href="/" style="color:white; ">How it Works</a></li>
-								<li><a href="/" style="color:white; ">HIPAA</a></li>
-								<li><a href="/" style="color:white; ">Privacy Policy</a></li>
-								<li><a href="/" style="color:white;">Contact Us</a></li>
-								<li><a href="/" style="color:white; ">Blog</a></li>
-							</ul>
-						</div>
-
-						<div class="col-md-3 col-lg-3 col-xs-3 col-sm-3">
-							<h4>&nbsp;</h4>
-							<ul style="list-style-type:none; padding-left: 0px;">
-								<li><a href="/" style="color:white; ">Our Mission</a></li>
-								<li><a href="/" style="color:white; ">FAQs</a></li>
-								<li><a href="/" style="color:white; ">Terms of Use</a></li>
-								<li><a href="/" style="color:white; ">Management</a></li>
-								<li><a href="/" style="color:white;">News & Events</a></li>
-								<ul>
-						</div>
-						<div class="col-md-1 col-lg-1 col-xs-1 col-sm-1">
-						</div>
-						<div class="col-md-5 col-lg-5 col-xs-5 col-sm-5" style="padding-left: 50px;">
-							<h4 style="color:white; font-size:15px;font-family:SourceSansPro-Regular;">Connect On</h4>
-							<a href=""><i class="fa fa-facebook-square fa-2x" style="color:rgb(58,87,149)"></i></a>
-							<a href=""><i class="fa fa-twitter-square fa-2x" style="color:rgb(40,169,224)" ></i></a>
-							<a href=""><i class="fa fa-google-plus-square fa-2x" style="color:rgb(230,75,68)"></i></a>
-							<a href=""><i class="fa fa-linkedin-square fa-2x" style="color:rgb(1,119,181)"></i></a>
-
-							<!-- <h4>&nbsp;</h4> -->
-							<!-- <div class="fb-like" data-href="LINK" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="padding-top: 2px;"></div> -->
-						</div>
-
-					</div>
-				</div>
-			</div>
-			<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-			<script src="/js/pro.js"></script>
-
-
-		</div>
-		</div>
-	</nav>
 	<!-- </div> -->
 
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="margin-top: 100px; ">
