--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -36,26 +36,29 @@
 						<br>
 					</div>
 					<br>
-          <!-- Hamari file -->
-        <div class="col-sm-6 col">
-					<form method="post" enctype="multipart/form-data">
-						<input type="hidden" name="action" value="upload">
-						<p>
-						<b> Please specify a file, or a set of files: </b>
-							<br>
-							<input type="file" name="upload" size="40" multiple>
-						</p>
-						<div>
-							<input name="submit" type="submit" value="Send">
-						</div>
-					</form>
-        </div>
-				<div class="col-sm-6 col">
-					<form method="post" enctype="multipart/form-data">
-						<input type="hidden" name="action" value="download">
+					<!-- Hamari file -->
+					<div class="col-sm-6 col">
+						<form method="post" enctype="multipart/form-data">
+							<input type="hidden" name="action" value="fileupload">
+							<p>
+								<b> Please specify a file, or a set of files: </b>
+								<br>
+								<input type="file" name="fileupload" size="40" multiple>
+							</p>
+							<div>
+								<input name="submit" type="submit" value="Send">
+							</div>
+						</form>
+					</div>
+					<div class="col-sm-6 col">
+						<form method="post" enctype="multipart/form-data">
+							<input type="hidden" name="action" value="download">
 							<input name="submit" type="submit" value="Download">
-					</form>
-        </div>
+						</form>
+						<div>
+							{{files}}
+						</div>
+					</div>
 					<!-- <input type="button" value="Edit" id="Edit" style="width: 70px;"/> -->
 					<!-- <input type="button" value="View" id="View" style="width: 70px;" /> -->
 					<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
