--- a/Gmt/templates/views/services.hbs
+++ b/Gmt/templates/views/services.hbs
@@ -1,1 +1,2 @@
 <h3>Welcome Bhau</h3>
+<input class="btn btn-primary btn-md raise " type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctors'">
