--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -185,7 +185,6 @@ $icon-font-path: "../fonts/";
 				}
 }
 .procedure {
-
 				overflow: hidden;
 				margin: 0;
 				.border {
@@ -636,6 +635,33 @@ a:focus {
 // 				width: 100%;
 // 				height: 100%;
 // }
+.carousel-fade {
+				.carousel-inner {
+								.item {
+												transition-property: opacity;
+								}
+								.item,
+								.active.left,
+								.active.right {
+												opacity: 0;
+								}
+								.active,
+								.next.left,
+								.prev.right {
+												opacity: 1;
+								}
+								.next,
+								.prev,
+								.active.left,
+								.active.right {
+												left: 0;
+												transform: translate3d(0, 0, 0);
+								}
+				}
+				.carousel-control {
+								z-index: 2;
+				}
+}
 .carousel-control.left,
 .carousel-control.right {
 				background-image: none;
@@ -667,6 +693,38 @@ a:focus {
 								}
 				}
 }
+.index_choose {
+				.title {
+								font-size: 31px;
+								padding-top: 30px;
+								padding-bottom: 5px;
+								color: rgb(149,149,149);
+								text-align: center;
+								font-family: SourceSansPro-Semibold;
+				}
+				.thumbnail {
+								border-radius: 0;
+								.image {
+												margin-bottom: 0;
+												width: 30%;
+												height: auto;
+												margin-left: auto;
+												margin-right: auto;
+												display: block;
+												padding: 25px 0 15px 5px;
+								}
+				}
+}
+.index_help {
+				.null {
+								border: none;
+				}
+				.image1 {
+								width: 50%;
+								height: auto;
+				}
+}
+
 .thumbnail>p {
 				font-family: SourceSansPro-Semibold;
 				text-align: center;
@@ -678,6 +736,7 @@ a:focus {
 				text-align: center;
 				font-size: 14px;
 }
+
 .btn-primary.raise {
 				border: 1px solid rgb(83, 200, 171);
 				color: white;
@@ -742,6 +801,7 @@ a:focus {
 				-o-background-size: cover;
 				background-size: cover;
 				display: table;
+
 				// margin-top: 100px;
 				width: 100%;
 				height: 447px;
@@ -754,6 +814,16 @@ a:focus {
 				-o-background-size: cover;
 				background-size: cover;
 }
+// hr.style17 {
+// 	border-top: 1px solid #8c8b8b;
+// 	text-align: center;
+// }
+// hr.style17:after {
+// 	content: 'V';
+// 	display: inline-block;
+//
+//
+// }
 .hero {
 				background: url("../images/Meet%20the%20Doctors.jpg")no-repeat center center;
 				background-repeat: no-repeat;
@@ -816,9 +886,53 @@ a:focus {
 								}
 				}
 }
-.tryIndex{
-	position: relative;
-	top: 113px;
+.tryIndex {
+				position: relative;
+				top: 113px;
+				overflow: hidden;
+}
+.text-data {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				top: 220px;
+				.pp {
+
+								// padding-left: 20px;
+								padding-bottom: 11px;
+								margin-bottom: 40px;
+								.border_doc {
+												border-bottom: 5px solid #ff6c6f;
+												width: 10%;
+												margin-top: -15px;
+												margin-bottom: 10px;
+								}
+				}
+				h2 {
+								font-family: SourceSansPro-Semibold;
+								font-size: 30px;
+								margin-bottom: 0;
+								color: rgb(100,100,100);
+				}
+				p {
+								font-size: 20px;
+								margin-bottom: 0;
+								font-family: SourceSansPro-Regular;
+				}
+}
+.main-text {
+				position: absolute;
+				top: 220px;
+				width: 100%;
+				p {
+								font-family: SourceSansPro-Semibold;
+								font-size: 30px;
+								margin-bottom: 0;
+								color: rgb(43,43,43);
+				}
+
+				// color: #FFF;
 }
 .hero1 {
 				background: url("../images/GMTHomeHD1.jpg")no-repeat center center;
@@ -829,39 +943,10 @@ a:focus {
 				background-size: cover;
 				display: table;
 				width: 100%;
+
 				// position: absolute;
 				// top: 114px;
 				height: 447px;
-				.container {
-								position: absolute;
-								bottom: 0;
-								left: 0;
-								width: 100%;
-								top: 220px;
-								.pp {
-
-												// padding-left: 20px;
-												padding-bottom: 11px;
-												margin-bottom: 40px;
-												.border_doc {
-																border-bottom: 5px solid #ff6c6f;
-																width: 10%;
-																margin-top: -15px;
-																margin-bottom: 10px;
-												}
-								}
-								h2 {
-												font-family: SourceSansPro-Semibold;
-												font-size: 30px;
-												margin-bottom: 0;
-												color: rgb(100,100,100);
-								}
-								p {
-												font-size: 20px;
-												margin-bottom: 0;
-												font-family: SourceSansPro-Regular;
-								}
-				}
 }
 @media only screen and (max-width: 750px) {
 				.hero {
