--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -5391,6 +5391,18 @@ a:focus {
   font-family: SourceSansPro-Regular;
   font-size: 16px; }
 
+.carousel-fade .carousel-inner .item {
+  transition-property: opacity; }
+.carousel-fade .carousel-inner .item, .carousel-fade .carousel-inner .active.left, .carousel-fade .carousel-inner .active.right {
+  opacity: 0; }
+.carousel-fade .carousel-inner .active, .carousel-fade .carousel-inner .next.left, .carousel-fade .carousel-inner .prev.right {
+  opacity: 1; }
+.carousel-fade .carousel-inner .next, .carousel-fade .carousel-inner .prev, .carousel-fade .carousel-inner .active.left, .carousel-fade .carousel-inner .active.right {
+  left: 0;
+  transform: translate3d(0, 0, 0); }
+.carousel-fade .carousel-control {
+  z-index: 2; }
+
 .carousel-control.left, .carousel-control.right {
   background-image: none;
   color: #cdcaca; }
@@ -5416,6 +5428,30 @@ a:focus {
       width: 160px;
       height: 160px;
       margin-top: 10px; }
+
+.index_choose .title {
+  font-size: 31px;
+  padding-top: 30px;
+  padding-bottom: 5px;
+  color: #959595;
+  text-align: center;
+  font-family: SourceSansPro-Semibold; }
+.index_choose .thumbnail {
+  border-radius: 0; }
+  .index_choose .thumbnail .image {
+    margin-bottom: 0;
+    width: 30%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: 25px 0 15px 5px; }
+
+.index_help .null {
+  border: none; }
+.index_help .image1 {
+  width: 50%;
+  height: auto; }
 
 .thumbnail > p {
   font-family: SourceSansPro-Semibold;
@@ -5548,7 +5584,42 @@ a:focus {
 
 .tryIndex {
   position: relative;
-  top: 113px; }
+  top: 113px;
+  overflow: hidden; }
+
+.text-data {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  top: 220px; }
+  .text-data .pp {
+    padding-bottom: 11px;
+    margin-bottom: 40px; }
+    .text-data .pp .border_doc {
+      border-bottom: 5px solid #ff6c6f;
+      width: 10%;
+      margin-top: -15px;
+      margin-bottom: 10px; }
+  .text-data h2 {
+    font-family: SourceSansPro-Semibold;
+    font-size: 30px;
+    margin-bottom: 0;
+    color: #646464; }
+  .text-data p {
+    font-size: 20px;
+    margin-bottom: 0;
+    font-family: SourceSansPro-Regular; }
+
+.main-text {
+  position: absolute;
+  top: 220px;
+  width: 100%; }
+  .main-text p {
+    font-family: SourceSansPro-Semibold;
+    font-size: 30px;
+    margin-bottom: 0;
+    color: #2b2b2b; }
 
 .hero1 {
   background: url("../images/GMTHomeHD1.jpg") no-repeat center center;
@@ -5560,29 +5631,6 @@ a:focus {
   display: table;
   width: 100%;
   height: 447px; }
-  .hero1 .container {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    top: 220px; }
-    .hero1 .container .pp {
-      padding-bottom: 11px;
-      margin-bottom: 40px; }
-      .hero1 .container .pp .border_doc {
-        border-bottom: 5px solid #ff6c6f;
-        width: 10%;
-        margin-top: -15px;
-        margin-bottom: 10px; }
-    .hero1 .container h2 {
-      font-family: SourceSansPro-Semibold;
-      font-size: 30px;
-      margin-bottom: 0;
-      color: #646464; }
-    .hero1 .container p {
-      font-size: 20px;
-      margin-bottom: 0;
-      font-family: SourceSansPro-Regular; }
 
 @media only screen and (max-width: 750px) {
   .hero {
