--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,147 +1,272 @@
 <div class="row procedure">
 	<div class="homepage">
-		<section class="hero1">
-			<section class="container">
+		<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval: "4000">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner owl-carousel owl-theme" role="listbox">
+				<div class="item active ">
+					<img src="../images/GMTHomeHD1.jpg" style="width:100%;height:447px">
+					<div class="carousel-caption">
+						<h2 style="margin-top:0px; font-size:33px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-100px;text-shadow: 0 1px 3px rgba(0, 0, 0, 20);">The perfect place for a complete recovery</h2>
+					</div>
+
+				</div>
+				<div class="item">
+					<img src="../images/GMT home racist.jpg" style="width:100%;height:447px">
+					<div class="carousel-caption">
+						<p style="margin-left: -2px;margin-top: 40px;">sdefsdrgtry</p>
+					</div>
+
+
+				</div>
+				<div class="item">
+					<img src="../images/yogacarausel1.jpg" style="width:100%;height:447px">
+
+				</div>
+			</div>
+
+		</div>
+
+		<!-- <div class="row">
+				<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12"></div>
+				<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
+					<p style="margin-left: -2px;margin-top: 40px;">The perfect place for a complete recovery</p>
+
+				</div>
+			</div> -->
+
+
+	</div>
+
+	<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="/js/pro.js"></script>
+	<script src="/js/image.js"></script>
+	<div class="row index_choose">
+		<p class="title">How You Choose</p>
+		<div class="row">
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row">
-					<!-- <div class="col-md-1 col-lg-1 col-sm-1 col-xs-12"></div> -->
-					<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail   " style="padding-left: 90px;border:none;">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " align="middle" style="" />
+							</div>
+							<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
+							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers dfyhrtf gj</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers fgjhg</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers gfjhgkj ftyhtr</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers gfjhgkj ftyhtr</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
+							</div>
 
-						<div class="row pp">
-							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
-							</div>
-							<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
-								<h2 style="margin-left: -2px;color: rgb(43, 43, 43);">The perfect place for a complete recovery</h2>
-								<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
-								<!-- <div class="border_doc">&nbsp;</div>
-								<p>Choose the right doctor for your treatment</p>
-								<p>Consult a specialist for a second opinion</p> -->
-							</div>
 						</div>
-						<!-- <div class="row">
-							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
+							</div>
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
 							</div>
 
-							<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12 block">
-
-
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
 							</div>
-							<div class="col-md-1 col-lg-1 col-sm-1 col-xs-0"></div>
-						</div> -->
-					</div>
+							<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
+							</div>
 
-					<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
-				</div>
-
-			</section>
-		</section>
-		<!-- <div class="row pp" style="margin-top: 50px;">
-			<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
-				<div class="row pp">
-					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
-					</div>
-					<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
-						<h2 style="margin-left: -2px;">Meet The Doctors</h2>
-						<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
-						<div class="border_doc">&nbsp;</div>
-						<p>Choose the right doctor for your treatment</p>
-						<p>Consult a specialist for a second opinion</p>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
-		</div> -->
-	</div>
-
-	<div class="row">
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail">
-				<!-- <img src="..." alt="..."> -->
-				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-				<div class="caption">
-
-					<p>DOC</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail">
-				<!-- <img src="..." alt="..."> -->
-				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-				<div class="caption">
-
-					<p>HOSP</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail">
-
-				<div class="caption">
-
-					<p>PROCEDURES</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+				<!-- <a href="/services">
+					<input type="submit" value="Learn More">
+				</a> -->
 			</div>
 		</div>
 	</div>
-
-	<div class="jumbotron" style="">
+	<div class="jumbotron" style="margin-bottom: 0px;">
 
 		<h1>Hello, world!</h1>
 		<p>...</p>
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 	</div>
+	<div class="row index_help">
+		<p style="font-size:30px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
+		<div class="row">
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+				<div class="row">
 
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null">
+							<img src="/images/ProviderResearch149.png" class="image1" id="ex1" style="padding-top:18px; padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px;padding-left:25px;">Provider Research</p>
+							</div>
+						</div>
+					</div>
 
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null ">
+							<img src="/images/MedicalVisa149.png" id="ex2" class="image1" style="padding-top:13px;  padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px;">Medical Visa</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null ">
+							<img src="/images/FlightBooking149.png" id="ex3" class="image1  " style="padding-top:27px; padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px;padding-left: 11px;">Flight Booking</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null">
+							<img src="/images/Stay149.png" id="ex4" class="image1  " style="padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px; padding-right: 25px;">Stay</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null">
+							<img src="/images/LocalLogistics149.png" id="ex5" class="image1  " style="padding-top:34px; padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px;">Local Logistics</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail null">
+							<img src="/images/Assistance149.png" id="ex6" class="image1" style="padding-top:30px; padding-bottom:20px;" />
+							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
+								<p style="padding-top: 5px;">Pre/Post Operative Assistance</p>
+							</div>
+						</div>
+					</div>
+					<div class="row" style="text-align:center;">
+						<a href="/services" style="font-family:SourceSansPro-Regular;font-size:16px;">
+							Learn More...
+							<!-- <input type="submit" value="Learn More" style="font-family:SourceSansPro-Regular;font-size:16px;"> -->
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+
+		</div>
+
+	</div>
 	<div class="row">
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-			<div class="thumbnail">
-				<!-- <img src="..." alt="..."> -->
-				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-				<div class="caption">
-
-					<p>DOC</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+		<p style="font-size:30px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">What We Say</p>
+	</div>
+	<div class="row" style="padding-top:20px;">
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+				<p style="font-family:SourceSansPro-Regular;font-size:18px;">travels</p>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+				<p style="font-family:SourceSansPro-Regular;font-size:18px;">Doctors</p>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+				<p style="font-family:SourceSansPro-Regular;font-size:18px;">Providers</p>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail" style="padding-left:0px">
+				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%; padding-bottom: 20px;">
+				<svg height="30" width="410">
+					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="180" y1="0" x2="205" y2="20" style="stroke:rgb(0,0,0);stroke-width:1" />
+				<line x1="205" y1="20" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					Sorry, your browser does not support inline SVG.
+				</svg>
+				<div class="caption " >
+					<h3 style="text-align:center">Travels</h3>
+					<p style="text-align:center">dfgfhyft</p>
 				</div>
 			</div>
 		</div>
-
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-			<div class="thumbnail">
-				<!-- <img src="..." alt="..."> -->
-				<!-- <span class="glyphicon glyphicon-star" aria-hidden="true"></span> -->
-				<div class="caption">
-
-					<p>HOSP</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> </p>
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail" style="padding-left:0px">
+				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
+				<svg height="30" width="410">
+					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="180" y1="0" x2="205" y2="30" style="stroke:rgb(0,0,0);stroke-width:1" />
+				<line x1="205" y1="30" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					Sorry, your browser does not support inline SVG.
+				</svg>
+				<div class="caption" >
+					<h3 style="text-align:center">Travels</h3>
+					<p style="text-align:center">dfgfhyft</p>
 				</div>
 			</div>
 		</div>
-
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-			<div class="thumbnail">
-
-				<div class="caption">
-
-					<p>PROCEDURES</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-			<div class="thumbnail">
-
-				<div class="caption">
-
-					<p>PROCEDURES</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="thumbnail" style="padding-left:0px">
+				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
+				<svg height="40" width="410">
+					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="180" y1="0" x2="205" y2="40" style="stroke:rgb(0,0,0);stroke-width:1" />
+				<line x1="205" y1="40" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
+					Sorry, your browser does not support inline SVG.
+				</svg>
+				<div class="caption" >
+					<h3 style="text-align:center">Travels</h3>
+					<p style="text-align:center">dfgfhyft</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
 </div>
