--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -9,7 +9,6 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link href="/styles/site.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
 
 	{{!-- This file provides the default styling for the KeystoneJS Content Editor - only renders when user is logged in and admin--}} {{{isAdminEditorCSS user}}} {{!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries //- Safely remove
@@ -68,7 +67,7 @@
 										<ul class="nav navbar-nav navbar-right">
 											{{# each navs}}
 											<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
-												<a href="{{ href }}" style="color:#959595; padding-right: 0px;">{{ label }}</a>
+												<a href="{{ href }}" style="color:#959595;background-color:rgb(43,43,43);">{{ label }}</a>
 											</li>
 											{{/each}}
 										</ul>
@@ -76,10 +75,10 @@
 								</div>
 								<div class="row" style="padding-top: 10px;">
 									<div class="collapse navbar-collapse">
-										<ul class="nav navbar-nav navbar-right">
+										<ul class="nav navbar-nav navbar-right" style="margin-right:0px;">
 											{{# each navLinks}}
 											<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
-												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);">{{ label }}</a>
+												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgb(43,43,43);">{{ label }}</a>
 											</li>
 											{{/each}}
 											<li style="padding-left:35px;">
@@ -203,8 +202,8 @@
 
 
 			</div>
-			</div>
-		</nav>
+	</div>
+	</nav>
 	</div>
 	<!-- <div class="container"> -->
 
