--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,5 +1,7 @@
 <!-- <div class="container"> -->
-<div class="row procedure">
+{{>header}}
+<div class="row procedure ">
+
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
 
 		<div class=" row doc">
@@ -300,3 +302,4 @@
 		</div>
 	</div>
 </div>
+{{>footer}}
