--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -1,4 +1,5 @@
-<div class="container">
+{{>header}}
+<div class="row procedure">
 	<!-- <div class="box"> -->
 	<div class="row box">
 		<div class="col-sm-6">
@@ -25,3 +26,4 @@
 		</div>
 	</div>
 </div>
+{{>footer}}
