--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -1,5 +1,7 @@
-<div class="container">
-
+{{>header}}
+<div class="container tryIndex">
+	<div class="row" style="height:113px; background-color:rgb(61,61,61) ">
+	</div>
 	<div class="row">
 		<div class="col-xs-3">
 			<ul class="nav nav-tabs nav-stacked">
@@ -244,11 +246,9 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
-
 			</div>
 		</div>
 	</div>
 </div>
+{{>footer}}
