--- a/Gmt/templates/emails/signup.hbs
+++ b/Gmt/templates/emails/signup.hbs
@@ -9,6 +9,6 @@
 		{{#if mailBody.email}}
 			<a href="mailto:{{enquiry.email}}">Email: {{mailBody.email}}</a>
 		{{/if}}
-		Click on link below and login Again to veryfy 
-		<a href="188.166.178.107/verify"> VERIFY </a>
+		Click on the below link to Complete Your Verification </br>
+     localhost:3000/verify/{{mailBody.uuid}}
 	{{/if}}
