--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -1,10 +1,13 @@
 <!-- <div class="container"> -->
+	{{>header}}
 <section class="hero ">
 	<section class="container">
+
 		<div class="row">
+
 			<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
 
-				<div class="row pp">
+				<div class="row pp" >
 					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
 					</div>
 					<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
@@ -159,5 +162,4 @@
 
 </div>
 
-
-<!-- </div> -->
+{{>footer}}
