--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,4 +1,7 @@
-<div class="row procedure">
+<!-- <div class="container"> -->
+{{>headerhome}}
+<div class="row procedure tryIndex">
+
 	<div class="homepage">
 		<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval: "4000">
 			<!-- Indicators -->
@@ -6,29 +9,49 @@
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				<!-- <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+			style="top: -10px; left: -1130px;right: 0px;"-->
 			</ol>
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner owl-carousel owl-theme" role="listbox">
+				<!-- <div class="carousel-caption " style="top:2%; left:0%;right: 0%;text-align:left;">
+					<div class="row">
+
+						<div class="col-lg-4">
+							<div class="row">
+								<div class="col-lg-1"></div>
+								<div class="col-lg-11" style="">
+									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:149px;height:72px;">
+								</div>
+
+
+							</div>
+						</div>
+						<div class="col-lg-8"></div>
+
+					</div>
+				</div> -->
+
 				<div class="item active ">
-					<img src="../images/GMTHomeHD1.jpg" style="width:100%;height:447px">
+
+					<img src="../images/GMTHomeRecovery1.jpg" style="width:100%;height:auto">
+
 					<div class="carousel-caption">
 						<h2 style="margin-top:0px; font-size:33px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-100px;text-shadow: 0 1px 3px rgba(0, 0, 0, 20);">The perfect place for a complete recovery</h2>
 					</div>
 
 				</div>
-				<div class="item">
-					<img src="../images/GMT home racist.jpg" style="width:100%;height:447px">
-					<div class="carousel-caption">
-						<p style="margin-left: -2px;margin-top: 40px;">sdefsdrgtry</p>
-					</div>
 
+				<div class="item">
+					<img src="../images/GMTHomeWellness1.jpg" style="width:100%;height:auto;">
 
 				</div>
 				<div class="item">
-					<img src="../images/yogacarausel1.jpg" style="width:100%;height:447px">
+					<img src="../images/GMTHomeYoga1.jpg" style="width:100%;height:auto;">
 
 				</div>
+
 			</div>
 
 		</div>
@@ -132,7 +155,7 @@
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 	</div>
 	<div class="row index_help">
-		<p style="font-size:30px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
+		<p style="font-size:32px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -140,7 +163,7 @@
 
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail null">
-							<img src="/images/ProviderResearch149.png" class="image1" id="ex1" style="padding-top:18px; padding-bottom:20px;" />
+							<img src="/images/ProviderResearch149.png" class="image1"  id="ex1" style="padding-top:18px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
 								<p style="padding-top: 5px;padding-left:25px;">Provider Research</p>
 							</div>
@@ -204,69 +227,164 @@
 		</div>
 
 	</div>
-	<div class="row">
-		<p style="font-size:30px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">What We Say</p>
-	</div>
-	<div class="row" style="padding-top:20px;">
+	<div class="row index_choose">
+		<p class="title">What They Say</p>
 		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
-				<p style="font-family:SourceSansPro-Regular;font-size:18px;">travels</p>
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+				<div class="row">
+
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border:none;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							</div>
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border:none;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							</div>
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border:none;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							</div>
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
+								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
+								<div style=" text-align:center">
+									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+								Learn More ...
+							</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
-				<p style="font-family:SourceSansPro-Regular;font-size:18px;">Doctors</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
-				<p style="font-family:SourceSansPro-Regular;font-size:18px;">Providers</p>
+			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+				<!-- <a href="/services">
+					<input type="submit" value="Learn More">
+				</a> -->
 			</div>
 		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail" style="padding-left:0px">
-				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%; padding-bottom: 20px;">
-				<svg height="30" width="410">
+	</div>
+
+
+	<!-- <div class="row">
+
+	<svg height="30" width="410">
+		<line x1="0" y1="10" x2="131" y2="10" style="stroke:rgb(0,0,0);stroke-width:0.5" />
+		<line x1="131" y1="10" x2="141" y2="0" style="stroke:rgb(0,0,0);stroke-width:0.5" />
+		<line x1="141" y1="0" x2="151" y2="10" style="stroke:rgb(0,0,0);stroke-width:0.5" />
+		<line x1="151" y1="10" x2="282" y2="10" style="stroke:rgb(0,0,0);stroke-width:0.5" /> Sorry, your browser does not support inline SVG.
+	</svg>
+
+
+	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+	<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+		<div class="row" style="padding-top:20px;">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+					<p style="font-family:SourceSansPro-Regular;font-size:18px;">Medical Travellers</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+					<p style="font-family:SourceSansPro-Regular;font-size:18px;">Doctors</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align:center">
+					<p style="font-family:SourceSansPro-Regular;font-size:18px;">Providers</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				<div class="thumbnail" style="padding-left:0px">
+					<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%; padding-bottom: 20px;">
+					<!-- <svg height="30" width="410">
 					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="180" y1="0" x2="205" y2="20" style="stroke:rgb(0,0,0);stroke-width:1" />
 				<line x1="205" y1="20" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					Sorry, your browser does not support inline SVG.
 				</svg>
-				<div class="caption " >
-					<h3 style="text-align:center">Travels</h3>
-					<p style="text-align:center">dfgfhyft</p>
+					<div class="caption ">
+						<h3 style="text-align:center">Travels</h3>
+						<p style="text-align:center">dfgfhyft</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail" style="padding-left:0px">
-				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
-				<svg height="30" width="410">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				<div class="thumbnail" style="padding-left:0px">
+					<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
+					<!-- <svg height="30" width="410">
 					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="180" y1="0" x2="205" y2="30" style="stroke:rgb(0,0,0);stroke-width:1" />
 				<line x1="205" y1="30" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					Sorry, your browser does not support inline SVG.
 				</svg>
-				<div class="caption" >
-					<h3 style="text-align:center">Travels</h3>
-					<p style="text-align:center">dfgfhyft</p>
+					<div class="caption">
+						<h3 style="text-align:center">Travels</h3>
+						<p style="text-align:center">dfgfhyft</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-			<div class="thumbnail" style="padding-left:0px">
-				<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
-				<svg height="40" width="410">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				<div class="thumbnail" style="padding-left:0px">
+					<!-- <div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+					<img src="/images/dipchandbhaskarbhandare - Copy.jpg" style="border-radius:50%;width:30%;height:30%;padding-bottom: 20px;">
+					<!-- </div> -->
+	<!-- <svg height="40" width="410">
 					<line x1="0" y1="0" x2="180" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="180" y1="0" x2="205" y2="40" style="stroke:rgb(0,0,0);stroke-width:1" />
 				<line x1="205" y1="40" x2="230" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					<line x1="230" y1="0" x2="410" y2="0" style="stroke:rgb(0,0,0);stroke-width:1" />
 					Sorry, your browser does not support inline SVG.
 				</svg>
-				<div class="caption" >
-					<h3 style="text-align:center">Travels</h3>
-					<p style="text-align:center">dfgfhyft</p>
+					<div class="caption ">
+						<h3 style="text-align:center">Travels</h3>
+						<p style="text-align:center">dfgfhyft</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
+	<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+</div> -->
 </div>
+{{>footer}}
