--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -1,19 +1,17 @@
 <!-- <div class="container"> -->
+{{>header}}
 <div class="row procedure">
+
 	<div class="col-lg-8 border no-padding">
 		{{#each providers}}
 			<div class="row provider-box">
 				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 					<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
 				</div>
-
 				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 provider-info">
 					<h3 style="">{{name}}</h3>
-
 					{{{summary}}}
 					<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'" style="outline:none;">Know More</button>
-
-
 				</div>
 			</div>
 		{{/each}}
@@ -61,3 +59,4 @@
 
 </div>
 <!-- </div> -->
+{{>footer}}
