--- a/Gmt/templates/views/verify.hbs
+++ b/Gmt/templates/views/verify.hbs
@@ -1,5 +1,10 @@
-<h3> Your Login is verified</h3>
-<h2> Please click on Login to Proceed
-  <a href="/profile">
-    <input type="submit" value="Login">
-  </a>
+	{{>header}}
+	<div class="row procedure">
+
+		<h3> Your Login is verified</h3>
+		<h2> Please click on Login to Proceed
+			<a href="/profile">
+				<input type="submit" value="Login">
+			</a>
+	</div>
+	{{>footer}}
